Fix spacing of menu items.

--- a/static/css/theme-tugboat.css
+++ b/static/css/theme-tugboat.css
@@ -203,11 +203,11 @@ a:hover {
     padding-bottom: 0;
 }
 
-#sidebar .topics ul li:first-child a {
-    padding-top: .5rem;
+#sidebar .topics ul li:first-child > a {
+    margin-top: .5rem;
 }
 
-#sidebar .topics ul li:last-child a {
+#sidebar .topics ul li:last-child > a {
     padding-bottom: .5rem;
 }
 
